<resources>

    <string name="app_name">Traversation</string>
    <string name="facebook_app_id">880589012031339</string>
    <string name="flurry_key">ZWCXH9C64NXCDWJKSRRV</string>

    <!-- Splash screen -->
    <string name="splash_btn_facebook">Facebook</string>
    <string name="splash_btn_google">Google</string>
    <string name="splash_btn_email">Log In with Traversation Account</string>

    <!-- Register screen -->
    <string name="title_activity_register">Create an Account</string>
    <string name="register_btn">Register</string>
    <string name="register_title_name">Name</string>
    <string name="register_title_email">Email</string>
    <string name="register_title_password">Password</string>
    <string name="register_title_password_repeat">Repeat Password</string>
    <string name="register_login_btn">Already have an account?</string>

    <!-- Login screen -->
    <string name="title_activity_login">Log In</string>
    <string name="login_btn">Log In</string>
    <string name="login_title_email">Email</string>
    <string name="login_title_password">Password</string>
    <string name="login_register_btn">Don\'t have an account?</string>

    <!-- Main screen -->
    <string name="main_search_hint">Search by station…</string>
    <string name="main_action_search">Search</string>
    <string name="main_action_add">Add Trip</string>
    <string name="main_action_done">Done</string>
    <string name="main_trips_departure_title">DEPARTURE</string>
    <string name="main_trips_arrival_title">ARRIVAL</string>
    <string name="main_trips_placeholder">NO TRIPS FOUND</string>
    <string name="main_context_favorite_on">Add to favorites</string>
    <string name="main_context_favorite_off">Remove from favorites</string>
    <string name="main_context_remove">Remove trip</string>

    <!-- Settings screen -->
    <string name="settings_notification_header">Notifications</string>
    <string name="settings_logout_title">Log Out</string>
    <string name="settings_sound_title">Sound</string>
    <string name="settings_vibrate_title">Vibrate</string>
    <string name="settings_account_header">Your Account</string>
    <string name="settings_other_header">Other</string>
    <string name="settings_feedback_title">Leave Feedback</string>

    <!-- Add a Trip screen -->
    <string name="title_activity_add_trip">Add a Trip</string>
    <string name="add_trip_title_type">Transport Type</string>
    <string name="add_trip_title_station_departure">Departure Station</string>
    <string name="add_trip_title_station_arrival">Arrival Station</string>
    <string name="add_trip_title_date_departure">Departure Date</string>
    <string name="add_trip_title_date_arrival">Arrival Date</string>
    <string name="add_trip_title_time_departure">Departure Time</string>
    <string name="add_trip_title_time_arrival">Arrival Time</string>

    <!-- Messages screen -->
    <string name="messages_text_hint">Your message</string>

    <!-- GCM -->
    <string name="gcm_sender_id">1097546984713</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

</resources>