<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/splash_button_email"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/splash_button_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_btn_facebook"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/splash_btn_facebook"
            android:theme="@style/ButtonFacebook" />

        <Button
            android:id="@+id/splash_button_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_btn_google"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/splash_btn_google"
            android:theme="@style/ButtonGoogle" />
    </LinearLayout>

    <Button
        android:id="@+id/splash_button_email"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:background="?selectableItemBackground"
        android:includeFontPadding="false"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/splash_btn_email"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp" />
</RelativeLayout>
