<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:id="@+id/add_trip_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="17dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="1dp"
                    android:contentDescription="@null"
                    android:tint="@color/accent"
                    android:src="@drawable/ic_type" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_trip_title_type"
                        android:textColor="@color/primary_text"
                        android:textSize="12sp" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/add_trip_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-8dp"
                        android:layout_marginStart="-8dp"
                        android:layout_marginTop="8dp"
                        android:entries="@array/transport_types" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="17dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="17dp"
                    android:layout_marginRight="17dp"
                    android:layout_marginTop="1dp"
                    android:contentDescription="@null"
                    android:tint="@color/accent"
                    android:src="@drawable/ic_station" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_trip_title_station_departure"
                        android:textColor="@color/primary_text"
                        android:textSize="12sp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/add_trip_station_departure_auto_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-3dp"
                            android:layout_marginStart="-3dp"
                            android:completionThreshold="1"
                            android:inputType="textNoSuggestions"
                            android:textColor="@color/accent"
                            android:textSize="16sp" />

                        <ProgressBar
                            android:id="@+id/add_trip_station_departure_progress_bar"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_gravity="center_vertical|end"
                            android:layout_marginRight="3dp"
                            android:visibility="gone" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/add_trip_title_station_arrival"
                        android:textColor="@color/primary_text"
                        android:textSize="12sp" />


                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/add_trip_station_arrival_auto_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-3dp"
                            android:layout_marginStart="-3dp"
                            android:inputType="textNoSuggestions"
                            android:textColor="@color/accent"
                            android:textSize="16sp" />

                        <ProgressBar
                            android:id="@+id/add_trip_station_arrival_progress_bar"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_gravity="center_vertical|end"
                            android:layout_marginRight="3dp"
                            android:visibility="gone" />
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="9dp"
                android:paddingEnd="17dp"
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:paddingStart="17dp"
                android:paddingTop="17dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="17dp"
                    android:layout_marginRight="17dp"
                    android:layout_marginTop="1dp"
                    android:contentDescription="@null"
                    android:tint="@color/accent"
                    android:src="@drawable/ic_date" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-3dp"
                    android:layout_marginStart="-3dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_trip_title_date_departure"
                        android:textColor="@color/primary_text"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/add_trip_departure_date_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:textColor="@color/accent"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/add_trip_title_date_arrival"
                        android:textColor="@color/primary_text"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/add_trip_arrival_date_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:textColor="@color/accent"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="9dp"
                android:paddingEnd="17dp"
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:paddingStart="17dp"
                android:paddingTop="17dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="17dp"
                    android:layout_marginRight="17dp"
                    android:layout_marginTop="1dp"
                    android:contentDescription="@null"
                    android:tint="@color/accent"
                    android:src="@drawable/ic_time" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-3dp"
                    android:layout_marginStart="-3dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_trip_title_time_departure"
                        android:textColor="@color/primary_text"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/add_trip_departure_time_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:textColor="@color/accent"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/add_trip_title_time_arrival"
                        android:textColor="@color/primary_text"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/add_trip_arrival_time_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:textColor="@color/accent"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>